# xcode-test

xcode-test/: CHANGELOG.md  README.md  main.cpp
xcode-test.xcodeproj/: project.pbxproj
xcode-test.xcodeproj/xcuserdata/Zhuanz1.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode-test/app_jetson/: CMakeLists.txt
xcode-test/app_jetson/infer/tensorrt_mask_v8_que/: muti2.cu  muti2.cuh  yolo_que.cpp  yolo_que.hpp
xcode-test/app_jetson/infer/v8/: muti.cu  muti.cuh  yolo.cpp  yolo.hpp
xcode-test/app_jetson/prefer/: get_video1.hpp
xcode-test/app_jetson/test_main/: CMakeLists.txt
xcode-test/app_rk/: CMakeLists.txt
xcode-test/app_rk/car/: CMakeLists.txt
xcode-test/app_rk/car/app_carLPR/: CMakeLists.txt
xcode-test/app_rk/face/: CMakeLists.txt
xcode-test/app_rk/infer/: rknn.cmake
xcode-test/app_rk/infer/car_plate/: car_infer.cpp  car_infer.h  postprocess.cc  postprocess.h
xcode-test/app_rk/infer/face/: face_recognition.cpp  face_recognition.h
xcode-test/app_rk/infer/face/yolov5face/: CMakeLists.txt  face2yolov5.cpp  face2yolov5.h  main.cc  main_dir.cc  postprocess.cc  postprocess.h
xcode-test/app_rk/infer/rk_cls/: demo.cpp  rk_cls.cpp  rk_cls.h
xcode-test/app_rk/infer/rk_seg/: rk_seg.cpp  rk_seg.h
xcode-test/app_rk/infer/rk_seg/tmp/: postprocess.cc  postprocess.h
xcode-test/app_rk/infer/rknn_Mclass/: rknn.cmake
xcode-test/app_rk/infer/rknn_Mclass/include/: infer.h  postprocess.h
xcode-test/app_rk/infer/rknn_Mclass/src/: postprocess.cc  rknn_detector.cpp
xcode-test/app_rk/prefer/: MppEncode.cpp  MppEncode.hpp  get_video1.hpp  get_video_opencv.hpp  get_videoffmpeg.cpp  get_videoffmpeg.hpp  mp4_muxer.cpp  mp4_muxer.hpp
xcode-test/app_rk/test_main/: CMakeLists.txt
xcode-test/app_x86/: CMakeLists.txt
xcode-test/app_x86/car/: CMakeLists.txt
xcode-test/app_x86/face/: CMakeLists.txt
xcode-test/app_x86/infer/: tensorrt.cmake  tensorrt2204.cmake
xcode-test/app_x86/infer/car_plate/: CrnnNet.cpp  CrnnNet.h  car_det.cpp  car_det.h
xcode-test/app_x86/infer/face/: face_det.cpp  face_det.h  face_expression.h  face_rec.cpp  face_rec.h
xcode-test/app_x86/infer/tensorrt/: tr.cpp  tr.h  utils.h
xcode-test/app_x86/infer/tensorrt_mask_v8/: Matmuti.cu  muti.cu  muti.cuh  yolo.cpp  yolo.hpp
xcode-test/app_x86/infer/torch/: torch.h
xcode-test/app_x86/prefer/: get_video1.hpp  get_videoffmpeg.cpp  get_videoffmpeg.hpp  mp4_muxer.cpp
xcode-test/app_x86/test_main/: CMakeLists.txt
xcode-test/common/: ConvertImage.cpp  ConvertImage.h  common.cmake  common_header.h  opencv_header.h
xcode-test/common/MyLock/: write_priotity_lock.h
xcode-test/common/Track/bytetrack/: BYTETracker.cpp  CMakeLists.txt  STrack.h  bytetrack.cpp
xcode-test/common/Track/inc/: KalmanTracker.h  SORT.h
xcode-test/common/Track/src/: Hungarian.cpp  KalmanTracker.cpp  SORT.cpp
xcode-test/common/Track/tmp/: SORT-有减一的bug.cpp
xcode-test/common/alarmVideo/: alarm_video.cpp  alarm_video.h
xcode-test/common/http/: crow_all.h  httplib_v1.h  httpprocess.cpp  httpprocess.h
xcode-test/common/json/: jsoncpp.cpp
xcode-test/common/license/: CMakeLists.txt  get_mac.h  license.cpp  license.h  plusaes.hpp
xcode-test/common/license/tmp/: get_mac.h  license copy.cpp  license.cpp  license.h
xcode-test/common/mp4Rec/: mp4Rec.cpp  mp4Rec.h
xcode-test/common/websocket/: websocket_syn.h
xcode-test/post/: base.h  httpCamStatus.h  model_base.h  post_util.h  queue.h  thread_pool.h
xcode-test/post/algsCom/: app_postprocess.h  cdsServer.h  httpGetImage.h  httpMechanical.h  main_all.cpp  main_cam_status.cpp  post_custom.h  post_util.h
xcode-test/post/algsCom/face_recognition/: app_postprocess.h  main_all.cpp
xcode-test/post/algsCom/license_plate_detection/: app_postprocess.h  main_all.cpp
xcode-test/post/car/: car_thread.cpp  car_thread.h
xcode-test/post/car/app_carLPR/: main.cpp  post_process.cpp  post_process.h
xcode-test/post/face/: faceDemo.cpp  faceDemo.h  face_db.cpp  face_db.h  face_process.cpp  face_process.h
xcode-test/post/inferModel/: car_plate.h  customModel-new.h  customModel.h  customModelSim.h  face_rec.h  jetsonModel.h  rkModel.h  tsModel.h
